--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -116,6 +116,14 @@
 					padding-bottom: 0;
 				}
 			}
+
+			@include breakpoint(xmall) {
+				li {
+					a {
+						width: 15em;
+					}
+				}
+			}
 		}
 	}
 
